--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@ body {
 
 /* headings and logo */
 
-h1, h2 {
+h1,
+h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -33,8 +34,10 @@ h1, h2 {
     letter-spacing: 4px;
 }
 
-#menu, #logo {
+#menu,
+#logo {
     line-height: 75px;
+    margin-left: 30px;
 }
 
 #menu li {
@@ -62,6 +65,13 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position:relative;
+}
+
+#cover-text,
+#cover-text h2 {
+    color: #fff;
 }
 
 #hero-image {
@@ -77,10 +87,55 @@ h1, h2 {
 
 /* creates the level of zoom for hero image */
 @keyframes hero-zoom {
-    from{
+    from {
         transform: scale(1);
     }
-    to{
+
+    to {
         transform: scale(1.1);
     }
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241,109,107,.7);
+
+    bottom:30px;
+    right:150px;
+
+    position:absolute;
+}
+
+/* Club ethos */
+
+#club-ethos {
+    height:600px;
+}
+
+#left-about{
+    padding-top:30px;
+    width:33%;
+    float:left;
+    background-color:blue;
+}
+#right-about{
+    padding-top:30px;
+    width:33%;
+    float:right;
+    background-color:silver;
+}
+#center-about{
+    width:33%;
+    margin : 0 auto;
+    background-color:green;
 }
