--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,3 +139,14 @@ h2 {
     margin : 0 auto;
     background-color:green;
 }
+
+/* event times */
+
+#times {
+    background-image: url('../images/times-background.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+}
