--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ footer {
             height:150px;
             padding:0;
         }
-        
+
     hr {
         display: none;
     }
@@ -320,4 +320,14 @@ footer {
         text-align: center;
         padding:0 20px;
     }
+
+    #photos{
+        column-count:3;
+    }
+/* For small screen sizes 800px and down */
+@media screen and (max-width:800px) {
+    #photos {
+        column-count: 2;
+    }
+
 }
